objects/LAT_PromotionalAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vodkas Nacionais</fullName>
                </value>
                <value>
                    <fullName>Vodka Super Premium</fullName>
                </value>
                <value>
                    <fullName>Vodkas Importadas</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Espumantes</fullName>
                </value>
                <value>
                    <fullName>Whisky Nacional</fullName>
                </value>
                <value>
                    <fullName>Whisky Engarrafado</fullName>
                </value>
                <value>
                    <fullName>Whisky Standard</fullName>
                </value>
                <value>
                    <fullName>Whisky 12 anos</fullName>
                </value>
                <value>
                    <fullName>Whisky Super Premium</fullName>
                </value>
                <value>
                    <fullName>Whisky Single Malt</fullName>
                </value>
                <value>
                    <fullName>Whiskie Irlandês</fullName>
                </value>
                <value>
                    <fullName>Whiskie Americano</fullName>
                </value>
                <value>
                    <fullName>Rum Nacional</fullName>
                </value>
                <value>
                    <fullName>Rum Importado</fullName>
                </value>
                <value>
                    <fullName>Gin Nacional</fullName>
                </value>
                <value>
                    <fullName>Gin Importado</fullName>
                </value>
                <value>
                    <fullName>Cachaça</fullName>
                </value>
                <value>
                    <fullName>Tequila</fullName>
                </value>
                <value>
                    <fullName>Aperitivos</fullName>
                </value>
                <value>
                    <fullName>CHIVAS 12</fullName>
                </value>
                <value>
                    <fullName>VODKA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Número do contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>Acordo Promocional</relationshipLabel>
        <relationshipName>Acordos_Promocionales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExclusivityPromotional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusividade Promocional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prioridade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualExclusivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusividade Visual</label>
        <type>Checkbox</type>
    </fields>
    <label>Acordo Promocional</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>ID Acordo Promocional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acordos Promocionales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>